@@ -33,17 +33,19 @@
 
         <br> <!-- vertical space -->
 
-        <!-- Show Compass check box -->
-        <input id="compassCheckBox" name="" type="checkbox"/>
-        <label for="compassCheckBox" id="compassCheckBoxLabel"><%= showCompass %></label>
+        <fieldset data-role="controlgroup" data-type="vertical">
+            <!-- Show Compass check box -->
+            <input id="compassCheckBox" name="" type="checkbox"/>
+            <label for="compassCheckBox" id="compassCheckBoxLabel"><%= showCompass %></label>
 
-        <!-- Show Field check box -->
-        <input id="fieldCheckBox" name="" type="checkbox"/>
-        <label for="fieldCheckBox" id="fieldCheckBoxLabel"><%= showField %></label>
+            <!-- Show Field check box -->
+            <input id="fieldCheckBox" name="" type="checkbox"/>
+            <label for="fieldCheckBox" id="fieldCheckBoxLabel"><%= showField %></label>
 
-        <!-- Show Field Meter check box -->
-        <input id="meterCheckBox" name="" type="checkbox"/>
-        <label for="meterCheckBox" id="meterCheckBoxLabel"><%= showFieldMeter %></label>
+            <!-- Show Field Meter check box -->
+            <input id="meterCheckBox" name="" type="checkbox"/>
+            <label for="meterCheckBox" id="meterCheckBoxLabel"><%= showFieldMeter %></label>
+        </fieldset>
 
         <br> <!-- vertical space -->
 
