@@ -1,4 +1,5 @@
-12/3/13 SR fix: address error caused by setting initial slider value (see last line of WidgetConnector.connectSliderToProperty)
+12/3/12 use <fieldset data-role="controlgroup"> for grouping some check boxes
+12/3/12 SR fix: address error caused by setting initial slider value (see last line of WidgetConnector.connectSliderToProperty)
 12/3/12 SR fix: remove css workaround for "#strengthSliderDiv .ui-slider-handle"
 12/3/12 SR fix: layout of options panel header
 12/3/12 SR fix: slider is not being rewritten by jqm
